generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

// ---------------------------------------------------------------------------
// Core entities
// ---------------------------------------------------------------------------

model Program {
  id                   String   @id @default(uuid())
  name                 String
  slug                 String   @unique
  description          String?
  start_date           DateTime? @db.Date
  end_date             DateTime? @db.Date
  application_deadline DateTime? @db.Date
  currency             String    @default("USD") // USD | EUR | GBP
  tuition              Float?
  application_fee      Float?
  stipend              Float?
  stipend_frequency    String?  // daily | weekly | monthly | annual | one_time
  age_min              Int?
  age_max              Int?
  offers_scholarship   Boolean  @default(false)
  application_url      String?
  program_url          String?
  created_at           DateTime @default(now())
  updated_at           DateTime @updatedAt

  reviews               Review[]
  auditions             Audition[]
  reports               Report[]
  revisions             ProgramRevision[]
  program_instruments   ProgramInstrument[]
  program_categories    ProgramCategory[]
  program_locations     ProgramLocation[]
  program_productions   ProgramProduction[]
  import_sources        ImportSource[]
  program_candidates    ProgramCandidate[]

  @@map("program")
}

model Review {
  id             String   @id @default(uuid())
  program_id     String
  rating         Int
  year_attended  Int?
  reviewer_name  String?
  title          String?
  body           String
  created_at     DateTime @default(now())
  updated_at     DateTime @updatedAt

  program        Program  @relation(fields: [program_id], references: [id])
  reports        Report[]
  review_likes   ReviewLike[]

  @@map("review")
}

model ReviewLike {
  id         String   @id @default(uuid())
  review_id  String
  ip_hash    String
  created_at DateTime @default(now())

  review     Review   @relation(fields: [review_id], references: [id])

  @@unique([review_id, ip_hash])
  @@map("review_like")
}

model Audition {
  id               String   @id @default(uuid())
  program_id       String
  location_id      String
  time_slot        DateTime?
  audition_fee     Float?
  instructions     String?
  registration_url String?
  created_at       DateTime @default(now())
  updated_at       DateTime @updatedAt

  program              Program              @relation(fields: [program_id], references: [id])
  location             Location             @relation(fields: [location_id], references: [id])
  audition_instruments AuditionInstrument[]

  @@map("audition")
}

// ---------------------------------------------------------------------------
// Reference data
// ---------------------------------------------------------------------------

model Instrument {
  id         String   @id @default(uuid())
  name       String   @unique
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  program_instruments  ProgramInstrument[]
  audition_instruments AuditionInstrument[]

  @@map("instrument")
}

model Category {
  id         String   @id @default(uuid())
  name       String   @unique
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  program_categories ProgramCategory[]

  @@map("category")
}

model Location {
  id         String   @id @default(uuid())
  city       String
  country    String
  state      String?
  address    String?
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  auditions         Audition[]
  program_locations ProgramLocation[]

  @@map("location")
}

// ---------------------------------------------------------------------------
// Join tables
// ---------------------------------------------------------------------------

model ProgramInstrument {
  id            String     @id @default(uuid())
  program_id    String
  instrument_id String

  program       Program    @relation(fields: [program_id], references: [id])
  instrument    Instrument @relation(fields: [instrument_id], references: [id])

  @@unique([program_id, instrument_id])
  @@map("program_instrument")
}

model ProgramCategory {
  id          String   @id @default(uuid())
  program_id  String
  category_id String

  program     Program  @relation(fields: [program_id], references: [id])
  category    Category @relation(fields: [category_id], references: [id])

  @@unique([program_id, category_id])
  @@map("program_category")
}

model ProgramLocation {
  id          String   @id @default(uuid())
  program_id  String
  location_id String

  program     Program  @relation(fields: [program_id], references: [id])
  location    Location @relation(fields: [location_id], references: [id])

  @@unique([program_id, location_id])
  @@map("program_location")
}

model AuditionInstrument {
  id            String     @id @default(uuid())
  audition_id   String
  instrument_id String

  audition      Audition   @relation(fields: [audition_id], references: [id])
  instrument    Instrument @relation(fields: [instrument_id], references: [id])

  @@unique([audition_id, instrument_id])
  @@map("audition_instrument")
}

// ---------------------------------------------------------------------------
// Productions (operas / shows for a program's current season)
// ---------------------------------------------------------------------------

model Production {
  id         String   @id @default(uuid())
  title      String
  composer   String?
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  program_productions ProgramProduction[]

  @@map("production")
}

model ProgramProduction {
  id            String @id @default(uuid())
  program_id    String
  production_id String

  program    Program    @relation(fields: [program_id], references: [id])
  production Production @relation(fields: [production_id], references: [id])

  @@unique([program_id, production_id])
  @@map("program_production")
}

// ---------------------------------------------------------------------------
// Mailing list
// ---------------------------------------------------------------------------

model Subscriber {
  id            String   @id @default(uuid())
  email         String   @unique
  subscribed_at DateTime @default(now())

  @@map("subscriber")
}

// ---------------------------------------------------------------------------
// Program edit history (Wikipedia-style versioning)
// ---------------------------------------------------------------------------

model ProgramRevision {
  id          String   @id @default(uuid())
  program_id  String
  data        Json
  edit_summary String?
  created_at  DateTime @default(now())

  program     Program  @relation(fields: [program_id], references: [id])

  @@index([program_id, created_at])
  @@map("program_revision")
}

// ---------------------------------------------------------------------------
// Reports (user-submitted flags for inaccurate data or inappropriate content)
// ---------------------------------------------------------------------------

model Report {
  id             String   @id @default(uuid())
  program_id     String?
  review_id      String?
  report_type    String   // inaccurate_data | inappropriate_content | other
  description    String
  reporter_email String?
  status         String   @default("pending") // pending | reviewed | resolved | dismissed
  admin_notes    String?
  created_at     DateTime @default(now())
  updated_at     DateTime @updatedAt

  program        Program? @relation(fields: [program_id], references: [id])
  review         Review?  @relation(fields: [review_id], references: [id])

  @@index([status, created_at])
  @@map("report")
}

// ---------------------------------------------------------------------------
// Feedback (site-wide user feedback for the site owner)
// ---------------------------------------------------------------------------

model Feedback {
  id          String   @id @default(uuid())
  message     String
  email       String?
  status      String   @default("pending") // pending | read | resolved
  admin_notes String?
  created_at  DateTime @default(now())
  updated_at  DateTime @updatedAt

  @@index([status, created_at])
  @@map("feedback")
}

// ---------------------------------------------------------------------------
// Import pipeline
// ---------------------------------------------------------------------------
// Scraping never writes directly to `program` — everything flows through
// ImportSource → ImportRun → ProgramCandidate → human approval.

model ImportSource {
  id                String   @id @default(uuid())
  name              String
  url               String   @unique
  status            String   @default("active") // active | paused | broken
  schedule          String? // optional cron expression; null = manual only
  program_id        String? // optional pin to an existing canonical program
  last_fetched_at   DateTime?
  last_content_hash String?
  notes             String?
  created_at        DateTime @default(now())
  updated_at        DateTime @updatedAt

  program    Program?           @relation(fields: [program_id], references: [id])
  runs       ImportRun[]
  candidates ProgramCandidate[]

  @@map("import_source")
}

model ImportRun {
  id                    String    @id @default(uuid())
  import_source_id      String
  started_at            DateTime  @default(now())
  finished_at           DateTime?
  result                String // success | unchanged | fetch_error | extraction_error
  error_message         String?
  http_status           Int?
  content_hash          String?
  raw_html_gz           Bytes? // gzipped HTML, null on unchanged runs
  raw_html_size         Int? // uncompressed size in bytes
  extraction_model      String?
  extraction_tokens_in  Int?
  extraction_tokens_out Int?

  import_source ImportSource       @relation(fields: [import_source_id], references: [id])
  candidates    ProgramCandidate[]

  @@index([import_source_id, started_at])
  @@map("import_run")
}

model ProgramCandidate {
  id               String    @id @default(uuid())
  import_source_id String
  import_run_id    String
  program_id       String? // set on approve to link candidate to canonical program
  extracted_json   Json // full ProgramInput shape as returned by the extractor
  confidence       Float?
  status           String    @default("pending") // pending | approved | rejected | stale
  reviewer_notes   String?
  approved_at      DateTime?
  created_at       DateTime  @default(now())
  updated_at       DateTime  @updatedAt

  import_source ImportSource @relation(fields: [import_source_id], references: [id])
  import_run    ImportRun    @relation(fields: [import_run_id], references: [id])
  program       Program?     @relation(fields: [program_id], references: [id])

  @@index([status, created_at])
  @@map("program_candidate")
}

model PlatformVote {
  id       String   @id @default(uuid())
  platform String   // facebook | instagram | discord | reddit | other
  ip_hash  String   // sha256 hash of request IP
  created_at DateTime @default(now())

  @@unique([platform, ip_hash])
  @@map("platform_vote")
}
